2009-06-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx, src/result.cxx:
 - result used wrong deallocation function after result_data became const.
 - Thanks Kirit Saelensminde for figuring this out and fixing it!
2009-05-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_tablestream.cxx:
 - Also demonstrate column lists.  Thanks Robert Backhaus.
2009-05-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx:
 - Provide iterator as well as const_iterator
 - Fixes bug #184
2009-05-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh, include/Makefile.am, include/pqxx/Makefile.am,
 include/pqxx/pqxx, include/pqxx/version, include/pqxx/version.hxx.template:
 - Provide version info preprocessor macros, thanks jdennis at redhat.
2009-04-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
 src/connection_base.cxx, test/unit/test_prepared_statement.cxx:
 - Support unnamed prepared statement.
 include/pqxx/strconv.hxx:
 - Specialized string_traits for const string.
 - Made from_string on const break at compile time, thanks Robert Barnett.
 - Empty definition for default string_traits, thanks Daniel Frey.
2009-04-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/dbtransaction.hxx:
  - Made constructor public again, thanks Maurice Gittens.
2009-04-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/prepared_statement.hxx, test/unit/test_prepared_statement.cxx:
  - Documented & tested binary parameters, thanks Michael Akinde.
2009-04-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - When preparing varargs statement in SQL, don't skip parameter list.
2009-04-15  Eugene V. Lyubimkin <jackyf.devel@gmail.com>
 NEWS:
  - Typo fix.
2009-04-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/prepared_statement.hxx,
 include/pqxx/transaction_base.hxx, src/connection_base.cxx,
 src/prepared_statement.cxx, src/transasction_base.cxx,